fix user and google
